--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "srtem-course",
+  "name": "artem-course",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,18 +10,31 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
+    "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
+    "lint": "eslint src/**/*.ts{,x} --fix",
+    "prettier": "prettier --write \"**/*.+(ts|tsx)\"",
+    "commit-hook": "git add .",
+    "stylelint-fix": "stylelint \"**/*.+(css|scss)\" --fix"
   },
+  "pre-commit": [
+    "stylelint-fix",
+    "prettier",
+    "lint",
+    "commit-hook"
+  ],
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -39,5 +52,25 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.14",
+    "@typescript-eslint/eslint-plugin": "^5.1.0",
+    "@typescript-eslint/parser": "^5.1.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.26.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "pre-commit": "^1.2.2",
+    "prettier": "^2.4.1",
+    "react-app-rewire-alias": "^1.1.4",
+    "stylelint": "^13.13.1",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^22.0.0",
+    "stylelint-order": "^4.1.0",
+    "stylelint-prettier": "^1.2.0",
+    "stylelint-scss": "^3.21.0",
+    "tslint": "^6.1.3"
   }
 }
