--- a/package.json
+++ b/package.json
@@ -10,11 +10,21 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.24.0",
+    "connected-react-router": "^6.9.1",
+    "history": "^5.1.0",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
+    "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "reselect": "^4.1.2",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
     "web-vitals": "^1.1.2"
@@ -54,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/history": "^4.7.9",
     "@types/styled-components": "^5.1.14",
     "@typescript-eslint/eslint-plugin": "^5.1.0",
     "@typescript-eslint/parser": "^5.1.0",
