--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.4.0",
     "reselect": "^4.1.2",
     "styled-components": "^5.3.1",
     "typescript": "^4.4.3",
