--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "@types/node": "^12.20.27",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
+    "@types/react-router": "^5.1.17",
     "axios": "^0.24.0",
     "connected-react-router": "^6.9.1",
-    "history": "^5.1.0",
+    "history": "^4.10.1",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-app-rewired": "^2.1.8",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "react-router": "^6.0.2",
+    "react-router": "^5.2.1",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "redux": "^4.1.2",
